Line alignment fixed

--- a/components/main/Timesheet.module.css
+++ b/components/main/Timesheet.module.css
@@ -71,7 +71,7 @@
 .header__right__checkbox {
   flex-shrink: 0;
   align-self: flex-end;
-  margin-bottom: 10px;
+  margin-bottom: 9px;
   font-family: "Roboto";
 }
 
